<resources>
    <string name="app_name">PetBem_App</string>
    <string name="logo_do_aplicativo_petbem_description">Logo do Aplicativo PetBem</string>
    <string name="title_login_and_register">Bem-vindo ao PetBem</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="senha">Senha</string>
    <string name="login_btn">Entrar</string>
    <string name="nao_tem_conta">Não tem uma conta</string>
    <string name="cadastre_se"> CADASTRE-SE</string>
    <string name="linha_para_separa_texto">linha para separa texto</string>
    <string name="text_tela_register">Já tem uma conta ?</string>
    <string name="text_register">Registrar</string>
    <string name="text_register_login">Login</string>
    <string name="imagem_de_um_gato_e_um_cachorro_description">imagem de um gato e um cachorro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_categorias">image categorias</string>
    <string name="image_resumo">image_resumo</string>
    <string name="imagem_da_categoria">Imagem da categoria</string>
    <string name="categoria">Categoria</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="vacinas">Vacinas</string>
    <string name="higiene">Higiene</string>
    <string name="lembretes">Lembretes</string>
</resources>